[gd_scene load_steps=3 format=2]

[ext_resource path="res://default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/Settings.gd" type="Script" id=2]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Uis" type="CanvasLayer" parent="."]

[node name="Labels" type="Control" parent="Uis"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Uis/Labels"]
anchor_bottom = 1.0
offset_right = 768.0
theme = ExtResource( 1 )
custom_constants/separation = 115

[node name="ResetGame" type="Label" parent="Uis/Labels/VBoxContainer"]
offset_right = 896.0
offset_bottom = 64.0
text = "Reset Data: "
valign = 1

[node name="MusicLabel" type="Label" parent="Uis/Labels/VBoxContainer"]
offset_top = 179.0
offset_right = 896.0
offset_bottom = 243.0
text = "Music Volume: "
valign = 1

[node name="SFXLabel" type="Label" parent="Uis/Labels/VBoxContainer"]
offset_top = 358.0
offset_right = 896.0
offset_bottom = 422.0
text = "SFX Volume: "
valign = 1

[node name="Control" type="VBoxContainer" parent="Uis"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -957.0
theme = ExtResource( 1 )

[node name="ResetButton" type="Button" parent="Uis/Control"]
offset_right = 957.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 0, 100 )
text = "Reset Game"

[node name="MusicBar" type="HScrollBar" parent="Uis/Control"]
offset_top = 180.0
offset_right = 957.0
offset_bottom = 260.0
custom_minimum_size = Vector2( 0, 80 )
theme = ExtResource( 1 )
min_value = -80.0
max_value = 6.0
step = 1.0
page = 5.0
value = -4.0
custom_step = 1.0

[node name="SFXBar" type="HScrollBar" parent="Uis/Control"]
offset_top = 340.0
offset_right = 957.0
offset_bottom = 420.0
custom_minimum_size = Vector2( 0, 80 )
theme = ExtResource( 1 )
min_value = -80.0
max_value = 6.0
step = 1.0
page = 5.0
value = -4.0
custom_step = 1.0

[node name="QuitButton" type="Button" parent="Uis"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -100.0
theme = ExtResource( 1 )
text = "Quit"
icon_alignment = 1

[connection signal="pressed" from="Uis/Control/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="value_changed" from="Uis/Control/MusicBar" to="." method="_on_MusicBar_value_changed"]
[connection signal="value_changed" from="Uis/Control/SFXBar" to="." method="_on_SFXBar_value_changed"]
[connection signal="pressed" from="Uis/QuitButton" to="." method="_on_QuitButton_pressed"]
